feat: run kitty with config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -34,7 +34,7 @@ monitor=,highres@highrr,0x0,1.33
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = kitty
+$terminal = kitty --config $HOME/.config/kitty/kitty.conf
 $fileManager = nemo
 $menu = wofi --show drun -n
 
