feat: workspace transitions, gestures, and more theme changes

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -75,15 +75,18 @@ env = XCURSOR_THEME,Bibata-Modern-Classic
 # Refer to https://wiki.hyprland.org/Configuring/Variables/
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
+
+source = ~/.cache/wal/colors-hyprland
+
 general {
     gaps_in = 5
     gaps_out = 20
 
-    border_size = 2
+    border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = $color1 $color11 45deg
+    col.inactive_border = $color0
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -145,9 +148,9 @@ animations {
     animation = layersOut, 1, 1.5, linear, fade
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    animation = workspaces, 1, 1.12, quick, slidefade
+    # animation = workspacesIn, 1, 5, easeOutQuint, slide
+    # animation = workspacesOut, 1, 5, easeOutQuint, slide
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
@@ -201,7 +204,7 @@ input {
 
 # https://wiki.hyprland.org/Configuring/Variables/#gestures
 gestures {
-    workspace_swipe = false
+    workspace_swipe = true
 }
 
 # Example per-device config
