feat: freeze screen on screenshot

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -301,9 +301,9 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Screenshot
-bind = $mainMod SHIFT, S, exec, hyprshot -m region -o ~/Screenshots/
-bind = $mainMod SHIFT, D, exec, hyprshot -m window -o ~/Screenshots/
-bind = $mainMod SHIFT, A, exec, hyprshot -m active -m output -o ~/Screenshots/
+bind = $mainMod SHIFT, S, exec, hyprpicker -r -v & hyprshot -r -v -m region -o ~/Screenshots/
+bind = $mainMod SHIFT, D, exec, hyprpicker -r -v & hyprshot -m window -o ~/Screenshots/
+bind = $mainMod SHIFT, A, exec, hyprpicker -r -v & hyprshot -m active -m output -o ~/Screenshots/
 
 # System
 bind = $mainMod, ESCAPE, exec, wlogout -b 3 -p layer-shell
