--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -301,9 +301,9 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Screenshot
-bind = $mainMod SHIFT, S, exec, hyprpicker -r -v & hyprshot -r -v -m region -o ~/Screenshots/
-bind = $mainMod SHIFT, D, exec, hyprpicker -r -v & hyprshot -m window -o ~/Screenshots/
-bind = $mainMod SHIFT, A, exec, hyprpicker -r -v & hyprshot -m active -m output -o ~/Screenshots/
+bind = $mainMod SHIFT, S, exec, wayfreeze --after-freeze-cmd 'hyprshot -m region -o ~/Screenshots/; killall wayfreeze'
+bind = $mainMod SHIFT, D, exec, wayfreeze --after-freeze-cmd 'hyprshot -m window -o ~/Screenshots/; killall wayfreeze'
+bind = $mainMod SHIFT, A, exec, wayfreeze --after-freeze-cmd 'hyprshot -m active -m output -o ~/Screenshots/; killall wayfreeze'
 
 # System
 bind = $mainMod, ESCAPE, exec, wlogout -b 3 -p layer-shell
