feat: update theme stuff

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,5 +1,14 @@
 source = /home/$USER/.cache/wal/colors-hyprland
 
+auth {
+	fingerprint {
+		enabled = true
+		ready_message = Scan fingerprint to unlock
+		present_message = Scanning...
+		retry_delay = 250
+	}
+}
+
 background {
     monitor =
     path = $wallpaper
@@ -19,7 +28,7 @@ input-field {
     check_color= $backgroundCol $backgroundCol
     fail_color= $backgroundCol $backgroundCol
     font_color = $color9
-    font_family = CodeNewRoman Nerd Font Propo
+    font_family = FiraCode Nerd Font Mono
     fade_on_empty = false
     shadow_color = rgba(0,0,0,0.5)
     shadow_passes = 2
@@ -37,7 +46,7 @@ label {
     text = cmd[update:1000] date +"<b>%I</b>"
     color = $color9
     font_size = 200
-    font_family = CodeNewRoman Nerd Font Propo
+    font_family = Fira Code
     shadow_passes = 0
     shadow_size = 5
     position = -120, 410
@@ -51,7 +60,7 @@ label {
     text = cmd[update:1000] date +"<b>%M</b>"
     color = rgba(150,150,150, .4)
     font_size = 200
-    font_family = CodeNewRoman Nerd Font Propo
+    font_family = Fira Code
     shadow_passes = 0
     shadow_size = 5
     position = 120, 230
@@ -63,7 +72,7 @@ label {
     text = cmd[update:1000] date +"<b>%A, %B %d, %Y</b>"
     color = $color4
     font_size = 40
-    font_family = CodeNewRoman Nerd Font Propo
+    font_family = FiraCode Nerd Font Mono
     shadow_passes = 0
     shadow_size = 4
     position = -40,-20
@@ -72,10 +81,10 @@ label {
 }
 label {
     monitor =
-    text = <i>Hello</i> <b>$USER</b>
+    text = Hi, <b>$USER</b>
     color = $color5 
     font_size = 40
-    font_family = CodeNewRoman Nerd Font Propo
+    font_family = Fira Code
     shadow_passes = 0
     shadow_size = 4
     position = 40,-20
