--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,8 +24,9 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
+# monitor=DP-2,highres@highrr,0x0,1
+# monitor=HDMI-A-3,highres@highrr,-1920x0,1
 monitor=,highres@highrr,0x0,1.33
-
 
 ###################
 ### MY PROGRAMS ###
@@ -67,6 +68,7 @@ exec-once = nm-applet --indicator
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 env = XCURSOR_THEME,Bibata-Modern-Classic
+env = GTK_THEME,Materia-dark
 
 #####################
 ### LOOK AND FEEL ###
@@ -233,10 +235,10 @@ bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
 # Window resizing
-bind = $mainMod SHIFT, left, resizeactive, -25 0
-bind = $mainMod SHIFT, up, resizeactive, 0 -25
-bind = $mainMod SHIFT, right, resizeactive, 25 0
-bind = $mainMod SHIFT, down, resizeactive, 0 25
+binde = $mainMod SHIFT, left, resizeactive, -25 0
+binde = $mainMod SHIFT, up, resizeactive, 0 -25
+binde = $mainMod SHIFT, right, resizeactive, 25 0
+binde = $mainMod SHIFT, down, resizeactive, 0 25
 
 # Window moving
 bind = $mainMod CTRL, left, movewindow, l
@@ -262,6 +264,17 @@ bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
+bind = $mainMod, KP_End, workspace, 1
+bind = $mainMod, KP_Down, workspace, 2
+bind = $mainMod, KP_Next, workspace, 3
+bind = $mainMod, KP_Left, workspace, 4
+bind = $mainMod, KP_Begin, workspace, 5
+bind = $mainMod, KP_Right, workspace, 6
+bind = $mainMod, KP_Home, workspace, 7
+bind = $mainMod, KP_Up, workspace, 8
+bind = $mainMod, KP_Prior, workspace, 9
+bind = $mainMod, KP_Insert, workspace, 10 
+
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
 bind = $mainMod SHIFT, 2, movetoworkspace, 2
@@ -274,6 +287,17 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+bind = $mainMod SHIFT, KP_End, movetoworkspace, 1
+bind = $mainMod SHIFT, KP_Down, movetoworkspace, 2
+bind = $mainMod SHIFT, KP_Next, movetoworkspace, 3
+bind = $mainMod SHIFT, KP_Left, movetoworkspace, 4
+bind = $mainMod SHIFT, KP_Begin, movetoworkspace, 5
+bind = $mainMod SHIFT, KP_Right, movetoworkspace, 6
+bind = $mainMod SHIFT, KP_Home, movetoworkspace, 7
+bind = $mainMod SHIFT, KP_Up, movetoworkspace, 8
+bind = $mainMod SHIFT, KP_Prior, movetoworkspace, 9
+bind = $mainMod SHIFT, KP_Insert, movetoworkspace, 10 
+
 # Example special workspace (scratchpad)
 # bind = $mainMod, S, tosssgglespecialworkspace, magic
 # bind = $mainMod SHIFT, S, movetoworkspace, special:magic
@@ -285,6 +309,7 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+bind = ALT, Tab, workspace, previous
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
@@ -313,6 +338,7 @@ bind = ALT, a, exec, ~/.config/waybar/scripts/refresh.sh
 bind = ALT, B, exec, ~/.config/waybar/scripts/select.sh
 bind = ALT, r, exec, ~/.config/swaync/refresh.sh 
 bind = $mainMod, b, exec, zen-browser
+bind = $mainMod, h, exec, ~/.config/hypr/wofi_keybinds.sh
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
