feat: hopefully a working dotfiles

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -28,68 +28,62 @@ input-field {
     check_color= $backgroundCol $backgroundCol
     fail_color= $backgroundCol $backgroundCol
     font_color = $color9
-    font_family = FiraCode Nerd Font Mono
+    font_family = FiraCode Nerd Font
     fade_on_empty = false
     shadow_color = rgba(0,0,0,0.5)
     shadow_passes = 2
     shadow_size = 2
     rounding = 20
-    placeholder_text = <i></i>
+    placeholder_text = <i>Enter your password...</i>
     fail_text = <b>FAIL</b>
     fail_timeout = 300
     position = 0, -100
     halign = center
     valign = center
 }
+
 label {
     monitor =
-    text = cmd[update:1000] date +"<b>%I</b>"
-    color = $color9
-    font_size = 200
-    font_family = Fira Code
+    text = cmd[update:1000] date +"<b>%-I:%M%p</b>"
+    color = $color6
+    font_size = 95
+    font_family = FiraCode Nerd Font
     shadow_passes = 0
     shadow_size = 5
-    position = -120, 410
+    position = 0, 230
     halign = center
     valign = center
 }
 
+label {
+		monitor =
+		text = cmd[update:1000] date +"<b>%A, %B %d</b>"
+		color = $color7
+		font_size = 22
+		font_family = FiraCode Nerd Font
+		position = 0, 150
+}
 
 label {
     monitor =
-    text = cmd[update:1000] date +"<b>%M</b>"
-    color = rgba(150,150,150, .4)
-    font_size = 200
-    font_family = Fira Code
-    shadow_passes = 0
-    shadow_size = 5
-    position = 120, 230
-    halign = center
-    valign = center
-}
-label {
-    monitor =
-    text = cmd[update:1000] date +"<b>%A, %B %d, %Y</b>"
-    color = $color4
-    font_size = 40
-    font_family = FiraCode Nerd Font Mono
-    shadow_passes = 0
-    shadow_size = 4
-    position = -40,-20
-    halign = right
-    valign = top
-}
-label {
-    monitor =
-    text = Hi, <b>$USER</b>
+    text = Hi there, <b>$USER</b>
     color = $color5 
-    font_size = 40
-    font_family = Fira Code
+    font_size = 16
+    font_family = FiraCode Nerd Font
     shadow_passes = 0
     shadow_size = 4
-    position = 40,-20
-    halign = left
-    valign = top
+    position = 0,-36
+    halign = center
+    valign = center
 }
 
-
+label {
+	monitor =
+	text = cmd[update:1000] cat "$HOME/.config/hypr/hyprlock-media"
+	color = $color11
+	font_size = 16
+	font_family = FiraCode Nerd Font
+	position = 0, -400
+	halign = center
+	valign = center
+}
