--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -225,14 +225,14 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, T, exec, $terminal
-bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, SPACE, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, T, exec, $terminal # Launches a terminal
+bind = $mainMod, Q, killactive, # Kills the focused window
+bind = $mainMod, M, exit, # Exits hyprland
+bind = $mainMod, E, exec, $fileManager # Launches the file explorer
+bind = $mainMod, V, togglefloating, # Toggles a window to be floating
+bind = $mainMod, SPACE, exec, $menu # Opens the app launcher
+bind = $mainMod, P, pseudo,
+bind = $mainMod, J, togglesplit,
 
 # Window resizing
 binde = $mainMod SHIFT, left, resizeactive, -25 0
@@ -312,12 +312,12 @@ bindm = $mainMod, mouse:273, resizewindow
 bind = ALT, Tab, workspace, previous
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+bindel = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+bindel = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bindel = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindel = , XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindel = , XF86MonBrightnessUp, exec, brightnessctl s 10%+
+bindel = , XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
