fix: wallpaper wrong directory

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,9 +24,9 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-# monitor=DP-2,highres@highrr,0x0,1
-# monitor=HDMI-A-3,highres@highrr,-1920x0,1
-monitor=,highres@highrr,0x0,1.33
+monitor=DP-2,highres@highrr,0x0,1
+monitor=HDMI-A-3,highres@highrr,-1920x0,1
+# monitor=,highres@highrr,0x0,1.33
 
 ###################
 ### MY PROGRAMS ###
