fix: link issue

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -226,7 +226,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal # Launches a terminal
-bind = $mainMod, Q, killactive, # Kills the focused window
+# bind = $mainMod, Q, killactive, # Kills the focused window
 bind = $mainMod, M, exit, # Exits hyprland
 bind = $mainMod, E, exec, $fileManager # Launches the file explorer
 bind = $mainMod, V, togglefloating, # Toggles a window to be floating
