fix: hyprland conf

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,9 +24,9 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-2,highres@highrr,0x0,1
-monitor=HDMI-A-3,highres@highrr,-1920x0,1
-# monitor=,highres@highrr,0x0,1.33
+# monitor=DP-2,highres@highrr,0x0,1
+# monitor=HDMI-A-3,highres@highrr,-1920x0,1
+monitor=,highres@highrr,0x0,1.33
 
 ###################
 ### MY PROGRAMS ###
@@ -226,7 +226,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal # Launches a terminal
-# bind = $mainMod, Q, killactive, # Kills the focused window
+bind = $mainMod, Q, killactive, # Kills the focused window
 bind = $mainMod, M, exit, # Exits hyprland
 bind = $mainMod, E, exec, $fileManager # Launches the file explorer
 bind = $mainMod, V, togglefloating, # Toggles a window to be floating
