--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -53,6 +53,7 @@ $menu = wofi --show drun -n
 
 exec-once = waybar
 exec-once = swww-daemon
+exec-once = pywalfox start
 exec-once = hypridle
 exec-once = swaync
 exec-once = pypr
