--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,20 +1,20 @@
-foreground   #bfd3e2
-background   #0e0a17
-cursor       #bfd3e2
+foreground   #97c9cd
+background   #0F161E
+cursor       #97c9cd
 
-color0       #0e0a17
-color8       #85939e
-color1       #ED8E69
-color9       #ED8E69
-color2       #5C5E8F
-color10      #5C5E8F
-color3       #9B7188
-color11      #9B7188
-color4       #708BA5
-color12      #708BA5
-color5       #64A0D1
-color13      #64A0D1
-color6       #D8BABB
-color14      #D8BABB
-color7       #bfd3e2
-color15      #bfd3e2
+color0       #0F161E
+color8       #698c8f
+color1       #1D584C
+color9       #1D584C
+color2       #595B5A
+color10      #595B5A
+color3       #AB4D54
+color11      #AB4D54
+color4       #7E9D65
+color12      #7E9D65
+color5       #A44DB7
+color13      #A44DB7
+color6       #F106DB
+color14      #F106DB
+color7       #97c9cd
+color15      #97c9cd
