--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -86,7 +86,7 @@
       "warning": 30,
       "critical": 20
     },
-    "on-right-click": "tlpui",
+    "on-click-right": "tlpui",
     "format": "{capacity}% {icon}",
     "format-charging": "{capacity}% 󰂄",
     "format-plugged": "{capacity}% 󰂄 ",
