feat: lock screen

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -26,7 +26,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 # monitor=DP-2,highres@highrr,0x0,1
 # monitor=HDMI-A-3,highres@highrr,-1920x0,1
-monitor=,highres@highrr,0x0,1.33
+monitor=,highres@highrr,0x0,1
 
 ###################
 ### MY PROGRAMS ###
@@ -51,7 +51,7 @@ $menu = wofi --show drun -n
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 
-exec-once = waybar
+exec-once = ~/.config/hypr/launch_waybar.sh
 exec-once = swww-daemon
 exec-once = pywalfox start
 exec-once = hypridle
