--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -1,20 +1,18 @@
 source = /home/$USER/.cache/wal/colors-hyprland
-
 auth {
-	fingerprint {
-		enabled = true
-		ready_message = Scan fingerprint to unlock
-		present_message = Scanning...
-		retry_delay = 250
-	}
+    fingerprint {
+        enabled = true
+        ready_message = Scan fingerprint to unlock
+        present_message = Scanning...
+        retry_delay = 250
+    }
 }
-
 background {
     monitor =
     path = $wallpaper
-    blur_size = 5
-    blur_passes = 3
-    brightness = .6
+    blur_size = 3
+    blur_passes = 2
+    brightness = .8
 }
 input-field {
     monitor =
@@ -41,7 +39,6 @@ input-field {
     halign = center
     valign = center
 }
-
 label {
     monitor =
     text = cmd[update:1000] date +"<b>%-I:%M%p</b>"
@@ -53,37 +50,42 @@ label {
     position = 0, 230
     halign = center
     valign = center
+    shadow_color = rgba(26, 26, 26, 0.05)
+    shadow_passes = 5
 }
-
 label {
-		monitor =
-		text = cmd[update:1000] date +"<b>%A, %B %d</b>"
-		color = $color7
-		font_size = 22
-		font_family = FiraCode Nerd Font
-		position = 0, 150
+        monitor =
+        text = cmd[update:1000] date +"<b>%A, %B %d</b>"
+        color = $color7
+        font_size = 22
+        font_family = FiraCode Nerd Font
+        position = 0, 150
+        shadow_color = rgba(26, 26, 26, 0.05)
+        shadow_passes = 5
 }
-
 label {
     monitor =
     text = Hi there, <b>$USER</b>
-    color = $color5 
+    color = $color15 
     font_size = 16
     font_family = FiraCode Nerd Font
     shadow_passes = 0
     shadow_size = 4
     position = 0,-36
+    shadow_color = rgba(26, 26, 26, 0.05)
+    shadow_passes = 5
     halign = center
     valign = center
 }
-
 label {
-	monitor =
-	text = cmd[update:1000] cat "$HOME/.config/hypr/hyprlock-media"
-	color = $color11
-	font_size = 16
-	font_family = FiraCode Nerd Font
-	position = 0, -400
-	halign = center
-	valign = center
+    monitor =
+    text = cmd[update:1000] cat "$HOME/.config/hypr/hyprlock-media"
+    color = $color15
+    font_size = 16
+    font_family = FiraCode Nerd Font
+    position = 0, -400
+    halign = center
+    valign = center
+    shadow_color = rgba(26, 26, 26, 0.05)
+    shadow_passes = 5
 }
