--- a/.config/kitty/current-theme.conf
+++ b/.config/kitty/current-theme.conf
@@ -1,20 +1,20 @@
-foreground   #97c9cd
-background   #0F161E
-cursor       #97c9cd
+foreground   #dfc3ca
+background   #0d0c1a
+cursor       #dfc3ca
 
-color0       #0F161E
-color8       #698c8f
-color1       #1D584C
-color9       #1D584C
-color2       #595B5A
-color10      #595B5A
-color3       #AB4D54
-color11      #AB4D54
-color4       #7E9D65
-color12      #7E9D65
-color5       #A44DB7
-color13      #A44DB7
-color6       #F106DB
-color14      #F106DB
-color7       #97c9cd
-color15      #97c9cd
+color0       #0d0c1a
+color8       #9c888d
+color1       #384783
+color9       #384783
+color2       #4D4B85
+color10      #4D4B85
+color3       #6B5F8C
+color11      #6B5F8C
+color4       #986994
+color12      #986994
+color5       #C97AA1
+color13      #C97AA1
+color6       #708D99
+color14      #708D99
+color7       #dfc3ca
+color15      #dfc3ca
