refactor: replace with better UX-friendly colors

--- a/.config/sddm/hyprlock.template.conf
+++ b/.config/sddm/hyprlock.template.conf
@@ -66,26 +66,26 @@ TimeTextColor=\"$color6\"
 
 FormBackgroundColor=\"$background\"
 BackgroundColor=\"$background\"
-DimBackgroundColor=\"$background\"
+DimBackgroundColor=\"#000000\"
 
 LoginFieldBackgroundColor=\"$foreground\"
 PasswordFieldBackgroundColor=\"$foreground\"
 LoginFieldTextColor=\"$color7\"
 PasswordFieldTextColor=\"$color7\"
-UserIconColor=\"$color6\"
-PasswordIconColor=\"$color6\"
+UserIconColor=\"$color7\"
+PasswordIconColor=\"$color7\"
 
 PlaceholderTextColor=\"$color7\"
 WarningColor=\"#343746\"
 
-LoginButtonTextColor=\"$color6\"
-LoginButtonBackgroundColor=\"$foreground\"
-SystemButtonsIconsColor=\"$color6\"
-SessionButtonTextColor=\"$color6\"
-VirtualKeyboardButtonTextColor=\"$color6\"
+LoginButtonTextColor=\"$color7\"
+LoginButtonBackgroundColor=\"$color12\"
+SystemButtonsIconsColor=\"$color8\"
+SessionButtonTextColor=\"$color8\"
+VirtualKeyboardButtonTextColor=\"$color8\"
 
 DropdownTextColor=\"$color6\"
-DropdownSelectedBackgroundColor=\"$color1\"
+DropdownSelectedBackgroundColor=\"$color6\"
 DropdownBackgroundColor=\"$foreground\"
 
 HighlightTextColor=\"$foreground\"
@@ -105,7 +105,7 @@ PartialBlur=\"false\"
 FullBlur=\"true\"
 # Default false.
 # If you use FullBlur I recommend setting BlurMax to 64 and Blur to 1.0.
-BlurMax=\"64\"
+BlurMax=\"32\"
 # Default 48, Options: 2-64 (can go higher because depends on Blur).
 # Connected with: Blur.
 Blur=\"0.5\"
