--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -14,6 +14,7 @@
     "group/expand",
     "tray",
     "bluetooth",
+    "pulseaudio",
     "battery"
   ],
   "hyprland/workspaces": {
@@ -35,6 +36,30 @@
         8,
         9,
         10
+      ]
+    }
+  },
+  "pulseaudio": {
+    "format": "{icon} {volume}%",
+    "tooltip": false,
+    "format-muted": "",
+    "on-click": "pamixer -t",
+    "on-click-right": "pavucontrol",
+    "on-scroll-up": "pamixer -i 5",
+    "on-scroll-down": "pamixer -d 5",
+    "max-volume": 100,
+    "scroll-step": 2,
+    "format-icons": {
+      "headphone": "",
+      "hands-free": "",
+      "headset": "",
+      "phone": "",
+      "portable": "",
+      "car": "",
+      "default": [
+        "",
+        "",
+        ""
       ]
     }
   },
