feat: workspace per monitor and waybar multi monitor support (requires manual configuration)

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -254,50 +254,50 @@ bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
+bind = $mainMod, 1, exec, hyprsome workspace 1
+bind = $mainMod, 2, exec, hyprsome workspace 2
+bind = $mainMod, 3, exec, hyprsome workspace 3
+bind = $mainMod, 4, exec, hyprsome workspace 4
+bind = $mainMod, 5, exec, hyprsome workspace 5
+bind = $mainMod, 6, exec, hyprsome workspace 6
+bind = $mainMod, 7, exec, hyprsome workspace 7
+bind = $mainMod, 8, exec, hyprsome workspace 8
+bind = $mainMod, 9, exec, hyprsome workspace 9
+bind = $mainMod, 0, exec, hyprsome workspace 10
 
-bind = $mainMod, KP_End, workspace, 1
-bind = $mainMod, KP_Down, workspace, 2
-bind = $mainMod, KP_Next, workspace, 3
-bind = $mainMod, KP_Left, workspace, 4
-bind = $mainMod, KP_Begin, workspace, 5
-bind = $mainMod, KP_Right, workspace, 6
-bind = $mainMod, KP_Home, workspace, 7
-bind = $mainMod, KP_Up, workspace, 8
-bind = $mainMod, KP_Prior, workspace, 9
-bind = $mainMod, KP_Insert, workspace, 10 
+bind = $mainMod, KP_End, exec, hyprsome workspace 1
+bind = $mainMod, KP_Down, exec, hyprsome workspace 2
+bind = $mainMod, KP_Next, exec, hyprsome workspace 3
+bind = $mainMod, KP_Left, exec, hyprsome workspace 4
+bind = $mainMod, KP_Begin, exec, hyprsome workspace 5
+bind = $mainMod, KP_Right, exec, hyprsome workspace 6
+bind = $mainMod, KP_Home, exec, hyprsome workspace 7
+bind = $mainMod, KP_Up, exec, hyprsome workspace 8
+bind = $mainMod, KP_Prior, exec, hyprsome workspace 9
+bind = $mainMod, KP_Insert, exec, hyprsome workspace 10 
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod SHIFT, 1, exec, hyprsome move 1
+bind = $mainMod SHIFT, 2, exec, hyprsome move 2
+bind = $mainMod SHIFT, 3, exec, hyprsome move 3
+bind = $mainMod SHIFT, 4, exec, hyprsome move 4
+bind = $mainMod SHIFT, 5, exec, hyprsome move 5
+bind = $mainMod SHIFT, 6, exec, hyprsome move 6
+bind = $mainMod SHIFT, 7, exec, hyprsome move 7
+bind = $mainMod SHIFT, 8, exec, hyprsome move 8
+bind = $mainMod SHIFT, 9, exec, hyprsome move 9
+bind = $mainMod SHIFT, 0, exec, hyprsome move 10
 
-bind = $mainMod SHIFT, KP_End, movetoworkspace, 1
-bind = $mainMod SHIFT, KP_Down, movetoworkspace, 2
-bind = $mainMod SHIFT, KP_Next, movetoworkspace, 3
-bind = $mainMod SHIFT, KP_Left, movetoworkspace, 4
-bind = $mainMod SHIFT, KP_Begin, movetoworkspace, 5
-bind = $mainMod SHIFT, KP_Right, movetoworkspace, 6
-bind = $mainMod SHIFT, KP_Home, movetoworkspace, 7
-bind = $mainMod SHIFT, KP_Up, movetoworkspace, 8
-bind = $mainMod SHIFT, KP_Prior, movetoworkspace, 9
-bind = $mainMod SHIFT, KP_Insert, movetoworkspace, 10 
+bind = $mainMod SHIFT, KP_End, exec, hyprsome move 1
+bind = $mainMod SHIFT, KP_Down, exec, hyprsome move 2
+bind = $mainMod SHIFT, KP_Next, exec, hyprsome move 3
+bind = $mainMod SHIFT, KP_Left, exec, hyprsome move 4
+bind = $mainMod SHIFT, KP_Begin, exec, hyprsome move 5
+bind = $mainMod SHIFT, KP_Right, exec, hyprsome move 6
+bind = $mainMod SHIFT, KP_Home, exec, hyprsome move 7
+bind = $mainMod SHIFT, KP_Up, exec, hyprsome move 8
+bind = $mainMod SHIFT, KP_Prior, exec, hyprsome move 9
+bind = $mainMod SHIFT, KP_Insert, exec, hyprsome move 10 
 
 # Example special workspace (scratchpad)
 # bind = $mainMod, S, tosssgglespecialworkspace, magic
