--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -277,27 +277,27 @@ bind = $mainMod, KP_Prior, exec, hyprsome workspace 9
 bind = $mainMod, KP_Insert, exec, hyprsome workspace 10 
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, exec, hyprsome move 1
-bind = $mainMod SHIFT, 2, exec, hyprsome move 2
-bind = $mainMod SHIFT, 3, exec, hyprsome move 3
-bind = $mainMod SHIFT, 4, exec, hyprsome move 4
-bind = $mainMod SHIFT, 5, exec, hyprsome move 5
-bind = $mainMod SHIFT, 6, exec, hyprsome move 6
-bind = $mainMod SHIFT, 7, exec, hyprsome move 7
-bind = $mainMod SHIFT, 8, exec, hyprsome move 8
-bind = $mainMod SHIFT, 9, exec, hyprsome move 9
-bind = $mainMod SHIFT, 0, exec, hyprsome move 10
+bind = $mainMod SHIFT, 1, exec, hyprsome movefocus 1
+bind = $mainMod SHIFT, 2, exec, hyprsome movefocus 2
+bind = $mainMod SHIFT, 3, exec, hyprsome movefocus 3
+bind = $mainMod SHIFT, 4, exec, hyprsome movefocus 4
+bind = $mainMod SHIFT, 5, exec, hyprsome movefocus 5
+bind = $mainMod SHIFT, 6, exec, hyprsome movefocus 6
+bind = $mainMod SHIFT, 7, exec, hyprsome movefocus 7
+bind = $mainMod SHIFT, 8, exec, hyprsome movefocus 8
+bind = $mainMod SHIFT, 9, exec, hyprsome movefocus 9
+bind = $mainMod SHIFT, 0, exec, hyprsome movefocus 10
 
-bind = $mainMod SHIFT, KP_End, exec, hyprsome move 1
-bind = $mainMod SHIFT, KP_Down, exec, hyprsome move 2
-bind = $mainMod SHIFT, KP_Next, exec, hyprsome move 3
-bind = $mainMod SHIFT, KP_Left, exec, hyprsome move 4
-bind = $mainMod SHIFT, KP_Begin, exec, hyprsome move 5
-bind = $mainMod SHIFT, KP_Right, exec, hyprsome move 6
-bind = $mainMod SHIFT, KP_Home, exec, hyprsome move 7
-bind = $mainMod SHIFT, KP_Up, exec, hyprsome move 8
-bind = $mainMod SHIFT, KP_Prior, exec, hyprsome move 9
-bind = $mainMod SHIFT, KP_Insert, exec, hyprsome move 10 
+bind = $mainMod SHIFT, KP_End, exec, hyprsome movefocus 1
+bind = $mainMod SHIFT, KP_Down, exec, hyprsome movefocus 2
+bind = $mainMod SHIFT, KP_Next, exec, hyprsome movefocus 3
+bind = $mainMod SHIFT, KP_Left, exec, hyprsome movefocus 4
+bind = $mainMod SHIFT, KP_Begin, exec, hyprsome movefocus 5
+bind = $mainMod SHIFT, KP_Right, exec, hyprsome movefocus 6
+bind = $mainMod SHIFT, KP_Home, exec, hyprsome movefocus 7
+bind = $mainMod SHIFT, KP_Up, exec, hyprsome movefocus 8
+bind = $mainMod SHIFT, KP_Prior, exec, hyprsome movefocus 9
+bind = $mainMod SHIFT, KP_Insert, exec, hyprsome movefocus 10 
 
 # Example special workspace (scratchpad)
 # bind = $mainMod, S, tosssgglespecialworkspace, magic
